styling update - panel

--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
 					<img class="p-icon-sm" src="img/PenguinMarty.svg" alt="map-icon" style="display: inline-block;">
 				</div>
 				<h3>Let's plan yout trip!</h3>
+				<p>
+					Tell us where you are: type in your location or let us find it for you.
+				</p>
 
 				<div id="location">
 					<input type="text" id="start" name="start" required="required" placeholder="Your location" />
-					<button id="find-start">📍 Grab my geolocation</button>
+					<button id="find-start"> Find my location</button>
 				</div>
 				<button id="get-directions">Get directions</button>
 			</div>
