- / added between input and find my location - styling clean up - initial marker removed when directions displayed

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
 				<div id="location">
 					<input type="text" id="start" name="start" required="required" placeholder="Your location" />
+					<div class="line-h"></div>
 					<button id="find-start"> Find my location</button>
 				</div>
 				<button id="get-directions">Get directions</button>
