- generic css clean up

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			<header>
 				<h1>🐧 Meet the penguins! 🐧</h1>
 				<h2>Did you know you can
-					<span>pet</span> and
-					<span>feed</span>
-					<span class="penguin">penguins</span> at the London Zoo?</h2>
+					<span class="underlined">pet</span> and
+					<span class="underlined">feed</span>
+					<span class="highlighted">penguins</span> at the London Zoo?</h2>
 			</header>
 
 			<div id="search-container">
