--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
 			<div id="search-container">
 				<div id="penguins">
-					<img class="p-icon-sm" src="img/PenguinMarty.svg" alt="map-icon" style="display: inline-block;">
-					<img class="p-icon-lg" src="img/PenguinMarty.svg" alt="map-icon" style="display: inline-block;">
-					<img class="p-icon-sm" src="img/PenguinMarty.svg" alt="map-icon" style="display: inline-block;">
+					<img class="p-icon-sm" src="img/penguin.svg" alt="map-icon" style="display: inline-block;">
+					<img class="p-icon-lg" src="img/penguin.svg" alt="map-icon" style="display: inline-block;">
+					<img class="p-icon-sm" src="img/penguin.svg" alt="map-icon" style="display: inline-block;">
 				</div>
 				<h3>Let's plan yout trip!</h3>
 				<p>
