--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<img class="p-icon-lg" src="img/penguin.svg" alt="map-icon" style="display: inline-block;">
 					<img class="p-icon-sm" src="img/penguin.svg" alt="map-icon" style="display: inline-block;">
 				</div>
-				<h3>Let's plan yout trip!</h3>
+				<h3>Let's plan your trip!</h3>
 				<p>
 					Tell us where you are: type in your location or let us find it for you.
 				</p>
