--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				</p>
 
 				<div id="location">
-					<input type="text" id="start" name="start" required="required" placeholder="Your location" />
+					<input type="text" id="start" name="start" required="required" placeholder="Enter your location" />
 					<div class="line-h"></div>
 					<button id="find-start"> Find my location</button>
 				</div>
