--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8" />
@@ -68,7 +68,6 @@
 	</div>
 	<script src="js/map-style.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjW7hDR2nXG_KqCOQM3Y3kZYyih5w78PI&libraries=places&callback=createMap"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
