--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta charset="UTF-8" />
-
-	<title>Hello penguins!</title>
 	<meta name="viewport" content="width=device-width initial-scale=1.0">
+	<meta name="theme-color" content="#4054e1"/>
+	<title>Hello penguins!</title>
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/generics.css" />
 	<link rel="stylesheet" href="css/layout.css" />
