--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width initial-scale=1.0">
 	<meta name="theme-color" content="#4054e1"/>
 	<title>Hello penguins!</title>
+	<link rel="shortcut icon" type="img/penguin-icon-1x.png" href="/favicon.png"/>
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/generics.css" />
 	<link rel="stylesheet" href="css/layout.css" />
