--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
+	<meta name="description" content="This app will help you find directions to the London Zoo.">
 	<meta name="viewport" content="width=device-width initial-scale=1.0">
 	<meta name="theme-color" content="#4054e1"/>
 	<title>Hello penguins!</title>
