- alt attributes on icons corrected

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 			<div id="search-container">
 				<div id="penguins">
-					<img class="p-icon-sm" src="img/penguin.svg" alt="map-icon" style="display: inline-block;">
-					<img class="p-icon-lg" src="img/penguin.svg" alt="map-icon" style="display: inline-block;">
-					<img class="p-icon-sm" src="img/penguin.svg" alt="map-icon" style="display: inline-block;">
+					<img class="p-icon-sm" src="img/penguin.svg" alt="penguin-icon" style="display: inline-block;">
+					<img class="p-icon-lg" src="img/penguin.svg" alt="penguin-icon" style="display: inline-block;">
+					<img class="p-icon-sm" src="img/penguin.svg" alt="penguin-icon" style="display: inline-block;">
 				</div>
 				<h3>Let's plan your trip!</h3>
 				<p>
